k8s/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  namespace: solaradocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
        - name: celery
          image: solaradocs-web:latest
          imagePullPolicy: IfNotPresent
          command: ["celery", "-A", "logic", "worker", "--loglevel=info"]
