k8s/metrics-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-metrics
  namespace: solaradocs
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
---
apiVersion: v1
kind: Service
metadata:
  name: redis-metrics
  namespace: solaradocs
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - port: 9121
      targetPort: 9121
      nodePort: 30801
